# OLAF-Neighbourhood

./: .gitignore  CMakeLists.txt  README.md  TESTING.md
client/: README.md
doc/: README.md
python_server/: server.py
server/: README.md  debug_client.py  encryption_tests.py  server.pkey  server.py
server/tmp/: README.md
server/uploads/: README.md
src/: CMakeLists.txt  README.md  cli.hpp  client.cpp  client.hpp  client_data.cpp  client_data.hpp  client_data_handler.cpp  client_data_handler.hpp  connection.cpp  connection.hpp  data_processing.hpp  main.cpp  messagehandler.cpp  messagehandler.hpp  messages.cpp  messages.hpp  web_connection.cpp  web_connection.hpp
src/client/: CMakeLists.txt  client.hpp  connection.cpp  connection.hpp  main.cpp  messagehandler.cpp  messagehandler.hpp
src/messages/: CMakeLists.txt  messages.cpp  messages.hpp
src/server/: CMakeLists.txt  beast_main.cpp  main.cpp  server.cpp  server.hpp  simple_main.cpp
test/: CMakeLists.txt  README.md
